Added content to main, added 3 navs, and content, but no anchors

--- a/page 1.html
+++ b/page 1.html
@@ -6,7 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Victoria Wroblewski">
     <meta name="sitedescription" content="Rapid and stylish buriel. We collect the body, and attend to all details exactly as you desire.">
-    
   </head>
-
+  <body>
+    <nav class="main-nav">
+      <ul>
+        <li>
+          <a href="">Home </a>
+         </li>
+        <li>
+          <a href="">Order of Service</a>
+         </li>
+        <li>
+          <a href="">About Us</a>
+        </li>
+      </ul>
+    </nav>
+    <nav class="account-nav">
+    </nav>
+    <main>
+      <h1>Swiftly and with Style</h1>
+      <p>We take the burden out of the buriel.</p>
+    </main>
+  </body>
   </html>
