added CSS file, updated navs.

--- a/Contact us.html
+++ b/Contact us.html
@@ -11,13 +11,13 @@
     <nav class="main-nav">
       <ul>
         <li>
-          <a href="">Home </a>
+          <a href="home.html">Home </a>
          </li>
         <li>
           <a href="">Order of Service</a>
          </li>
         <li>
-          <a href="">About Us</a>
+          <a href="about us.html">About Us</a>
         </li>
       </ul>
     </nav>
@@ -37,7 +37,7 @@
         <a href="">Careers</a>
       </li>
       <li>
-        <a href="">Contact Us</a>
+        <a href="Contact us.html">Contact Us</a>
       </li>
     </ul>
   </nav>
