--- a/home.html
+++ b/home.html
@@ -11,18 +11,36 @@
     <nav class="main-nav">
       <ul>
         <li>
-          <a href="">Home </a>
+          <a href="home.html">Home </a>
          </li>
         <li>
           <a href="">Order of Service</a>
          </li>
         <li>
-          <a href="">About Us</a>
+          <a href="about us.html">About Us</a>
         </li>
       </ul>
     </nav>
     <nav class="account-nav">
+      <ul>
+        <li>
+          <a href="">Login</a>
+        </li>
+        <li>
+          <a href="">Create Account</a>
+        </li>
+      </ul>
     </nav>
+    <nav class="footer-nav">
+      <ul>
+        <li>
+        <a href="">Careers</a>
+      </li>
+      <li>
+        <a href="Contact us.html">Contact Us</a>
+      </li>
+    </ul>
+  </nav>
     <main>
       <h1>Swiftly and with Style</h1>
       <p>We take the burden out of the buriel.</p>
