Renamed aboutus and cssfile; linked css to aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Victoria Wroblewski">
     <meta name="sitedescription" content="Rapid and stylish buriel. We collect the body, and attend to all details exactly as you desire.">
+        <link rel="stylesheet" href="styling.css">
   </head>
   <body>
     <nav class="main-nav">
