placed menus, added 2 fonts, styled title, mainnav, headings, add bgrim

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,47 +7,53 @@
     <meta name="author" content="Victoria Wroblewski">
     <meta name="sitedescription" content="Rapid and stylish buriel. We collect the body, and attend to all details exactly as you desire.">
         <link rel="stylesheet" href="styling.css">
+        <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Quintessential" rel="stylesheet">
   </head>
   <body>
-    <nav class="main-nav">
+    <header>
+      <nav class="menu, account-nav">
+        <ul>
+          <li>
+            <a href="#">Login</a>
+          </li>
+          <li class="login">
+            <a href="#">Create</a>
+          </li>
+        </ul>
+      </nav>
+    <h1 class="site-name"> Swiftly and with Style</h1>
+    <nav class="menu, main-nav">
       <ul>
         <li>
           <a href="home.html">Home </a>
          </li>
         <li>
-          <a href="">Order of Service</a>
+          <a href="#">Order of Service</a>
          </li>
         <li>
           <a href="about us.html">About Us</a>
         </li>
       </ul>
     </nav>
-    <nav class="account-nav">
-      <ul>
-        <li>
-          <a href="">Login</a>
-        </li>
-        <li>
-          <a href="">Create Account</a>
-        </li>
-      </ul>
-    </nav>
-    <nav class="footer-nav">
+</header>
+  <main class="main">
+      <h2 class="heading">History</h2>
+      <p>Our company got its start in 1843 by French immigrant, Roger Alfonz. Our slogan stems from that time, when refridgeration was in its infancy and the dead had to be buried with dispatch, particularly in summer. Since then, we've been at the forefront of the funeral industry. In 1974 Ernest Alfonz launched our unique, all-inclusive service, taking responsibility for all aspects and arrangements of the funeral. He believed that he could best help grieving families by allowing them to outsource all funereal arrangements to him, participating in the process as much, or as little, as they chose. This is the principle by which we still operate; it is our job to make the process of burial as easy and stress-free as possible for our clients.</p>
+      <h2 class="heading">Today</h2>
+      <p>We were among the first funeral companies to incorporate the internet into our service, but we still maintain the personal touch. As a small, family owned company, we are able to look over every service order with care. Clients are then contacted by a real person to clarify and refine their instructions so that we can give the best possible service for you and your loved one.</p>
+  </main>
+  <footer>
+    <nav class="menu, footer-nav">
       <ul>
         <li>
         <a href="">Careers</a>
       </li>
-      <li>
+      <li class="contact">
         <a href="Contact us.html">Contact Us</a>
       </li>
     </ul>
   </nav>
-  <main>
-      <h1> Swiftly and with Style</h1>
-      <h2>History</h2>
-      <p>Our company got its start in 1843 by French immigrant, Roger Alfonz. Our slogan stems from that time, when refridgeration was in its infancy and the dead had to be buried with dispatch, particularly in summer. Since then, we've been at the forefront of the funeral industry. In 1974 Ernest Alfonz launched our unique, all-inclusive service, taking responsibility for all aspects and arrangements of the funeral. He believed that he could best help grieving families by allowing them to outsource all funereal arrangements to him, participating in the process as much, or as little, as they chose. This is the principle by which we still operate; it is our job to make the process of burial as easy and stress-free as possible for our clients.</p>
-      <h2>Today</h2>
-      <p>We were among the first funeral companies to incorporate the internet into our service, but we still maintain the personal touch. As a small, family owned company, we are able to look over every service order with care. Clients are then contacted by a real person to clarify and refine their instructions so that we can give the best possible service for you and your loved one.</p>
-  </main>
+</footer>
 </body>
 </html>
