--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
       </li>
     </ul>
   </nav>
-    <main>
+    <main class="main">
       <h1>Swiftly and with Style</h1>
       <p>We take the burden out of the buriel.</p>
     </main>
