fixed background image, played with background filter

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Quintessential" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="menu, account-nav">
         <ul>
           <li>
