Copied head,header + footer About -> Contact. Changed h's in contact

--- a/Contactus.html
+++ b/Contactus.html
@@ -1,71 +1,79 @@
 <!DOCTYPE html>
-  <html lang="en-US">
-  <head>
-    <title>Swiftly and with Style</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Victoria Wroblewski">
-    <meta name="sitedescription" content="Rapid and stylish buriel. We collect the body, and attend to all details exactly as you desire.">
-  </head>
-  <body>
-    <nav class="main-nav">
+<html lang="en-US">
+<head>
+  <title>Swiftly and with Style</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Victoria Wroblewski">
+  <meta name="sitedescription" content="Rapid and stylish buriel. We collect the body, and attend to all details exactly as you desire.">
+      <link rel="stylesheet" href="styling.css">
+      <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Quintessential" rel="stylesheet">
+</head>
+<body>
+  <header class="header">
+    <nav class="menu, account-nav">
       <ul>
         <li>
-          <a href="home.html">Home </a>
-         </li>
-        <li>
-          <a href="">Order of Service</a>
-         </li>
-        <li>
-          <a href="about us.html">About Us</a>
+          <a href="#">Login</a>
+        </li>
+        <li class="login">
+          <a href="#">Create</a>
         </li>
       </ul>
     </nav>
-    <nav class="account-nav">
-      <ul>
-        <li>
-          <a href="">Login</a>
-        </li>
-        <li>
-          <a href="">Create Account</a>
-        </li>
-      </ul>
-    </nav>
-    <nav class="footer-nav">
-      <ul>
-        <li>
-        <a href="">Careers</a>
-      </li>
+  <h1 class="site-name"> Swiftly and with Style</h1>
+  <nav class="menu, main-nav">
+    <ul>
       <li>
-        <a href="Contact us.html">Contact Us</a>
+        <a href="home.html">Home </a>
+       </li>
+      <li>
+        <a href="#">Order of Service</a>
+       </li>
+      <li>
+        <a href="aboutus.html">About Us</a>
       </li>
     </ul>
   </nav>
+</header>
   <main>
-    <h1 class="name">Swiftly and with Style</h1>
-    <h2>Contact</h2>
-    <h3>Senior Partners</h3>
-    <h4>William Alfonz</h4>
+    <h2 class="name">Swiftly and with Style</h2>
+    <h3>Contact</h3>
+    <h4>Senior Partners</h4>
+    <h5>William Alfonz</h5>
     <div class="contact">
       <p>waflonz@swiftly.com</p>
       <p>593-227-1996</p>
     </div>
-    <h4> Edith Alfonz</h4>
+    <h5> Edith Alfonz</h5>
     <div class="contact">
       <p>eaflsonz@swiftly.com</p>
       <p>583-228-1978</p>
     </div>
-    <h3>Staff</h3>
-    <h4>Jennifer Alfonz</h4>
+    <h4>Staff</h4>
+    <h5>Jennifer Alfonz</h5>
     <div class="contact">
       <p>jalfonz@swiftly.com</p>
       <p>583-223-1987</p>
     </div>
-    <h4>Herbert Marshall</h4>
+    <h5>Herbert Marshall</h5>
     <div class="contact">
       <p>hmarshall@swiftly.come</p>
       <p>583-243-1989</p>
     </div>
   </main>
+  <footer>
+  <nav class="menu, footer-nav">
+    <ul>
+      <li>
+      <a href="url">Careers</a>
+    </li>
+    <li class="contact">
+      <a href="Contactus.html">Contact Us</a>
+    </li>
+  </ul>
+</nav>
+</footer>
 </body>
-  </html>
+</html>
