--- a/Contactus.html
+++ b/Contactus.html
@@ -38,7 +38,7 @@
   </nav>
 </header>
   <main>
-    <h2 class="name">Swiftly and with Style</h2>
+    <h2 class="heading">Swiftly and with Style</h2>
     <h3>Contact</h3>
     <h4>Senior Partners</h4>
     <h5>William Alfonz</h5>
@@ -67,7 +67,7 @@
   <nav class="menu, footer-nav">
     <ul>
       <li>
-      <a href="url">Careers</a>
+      <a href="#">Careers</a>
     </li>
     <li class="contact">
       <a href="Contactus.html">Contact Us</a>
