--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
     <nav class="menu, footer-nav">
       <ul>
         <li>
-        <a href="url">Careers</a>
+        <a href="#">Careers</a>
       </li>
       <li class="contact">
         <a href="Contactus.html">Contact Us</a>
