padded headers, added classname.

--- a/Contactus.html
+++ b/Contactus.html
@@ -37,7 +37,7 @@
     </ul>
   </nav>
 </header>
-  <main>
+  <main class="main">
     <h2 class="heading">Swiftly and with Style</h2>
     <h3>Contact</h3>
     <h4>Senior Partners</h4>
