Fixed padding/spacing issues

--- a/Contactus.html
+++ b/Contactus.html
@@ -38,30 +38,36 @@
   </nav>
 </header>
   <main class="main">
+    <section class="s1">
     <h2 class="heading">Swiftly and with Style</h2>
     <h3>Contact</h3>
+  </section>
     <h4>Senior Partners</h4>
+    <section class="s2">
     <h5>William Alfonz</h5>
-    <div class="contact">
+    <div>
       <p>waflonz@swiftly.com</p>
       <p>593-227-1996</p>
     </div>
     <h5> Edith Alfonz</h5>
-    <div class="contact">
+    <div>
       <p>eaflsonz@swiftly.com</p>
       <p>583-228-1978</p>
     </div>
+  </section>
     <h4>Staff</h4>
+    <section class="s2">
     <h5>Jennifer Alfonz</h5>
-    <div class="contact">
+    <div>
       <p>jalfonz@swiftly.com</p>
       <p>583-223-1987</p>
     </div>
     <h5>Herbert Marshall</h5>
-    <div class="contact">
+    <div>
       <p>hmarshall@swiftly.come</p>
       <p>583-243-1989</p>
     </div>
+  </section>
   </main>
   <footer>
   <nav class="menu, footer-nav">
