Shortened menu options, changed max-width of text

--- a/Contactus.html
+++ b/Contactus.html
@@ -29,10 +29,10 @@
         <a href="home.html">Home </a>
        </li>
       <li>
-        <a href="#">Order of Service</a>
+        <a href="#">Service</a>
        </li>
       <li>
-        <a href="aboutus.html">About Us</a>
+        <a href="aboutus.html">About</a>
       </li>
     </ul>
   </nav>
